--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,5 +104,20 @@
             ],
             "env": {}
         }
+    ],
+    "cSpell.words": [
+        "Abhinav",
+        "Blazor",
+        "BROWSIX",
+        "frameworka",
+        "frameworki",
+        "Jangda",
+        "nieresponsywnie",
+        "Reiser",
+        "responsywność",
+        "responsywnych",
+        "SCTP",
+        "Skublewska",
+        "Suryś"
     ]
 }
