Add 5 more citations to state of the art

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,12 +112,20 @@
         "frameworka",
         "frameworki",
         "Jangda",
+        "Juslenius",
+        "Karadogan",
+        "Mert",
         "nieresponsywnie",
+        "Portowanie",
+        "przeportowane",
         "Reiser",
         "responsywność",
         "responsywnych",
+        "Santeri",
         "SCTP",
         "Skublewska",
-        "Suryś"
+        "Streamr",
+        "Suryś",
+        "Weihang"
     ]
 }
