Add empty chapters and sections

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -123,6 +123,7 @@
         "responsywnych",
         "Santeri",
         "SCTP",
+        "SIMD",
         "Skublewska",
         "Streamr",
         "Suryś",
