Add Rust section and summary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,6 +115,7 @@
         "frameworki",
         "frontendy",
         "inicjalizacji",
+        "inicjalizujący",
         "Jangda",
         "Juslenius",
         "Karadogan",
@@ -125,6 +126,8 @@
         "Reiser",
         "responsywność",
         "responsywnych",
+        "rustup",
+        "Ryzen",
         "Santeri",
         "SCTP",
         "SIMD",
