--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -125,6 +125,7 @@
         "przeportowane",
         "RAII",
         "Reiser",
+        "responsywnością",
         "responsywność",
         "responsywnych",
         "rustup",
