Add WebSocket and WebRTC comparison

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -136,6 +136,8 @@
         "Skublewska",
         "Streamr",
         "Suryś",
+        "telechirurgii",
+        "uruchomieniowe",
         "Weihang",
         "zaalokowanej"
     ],
