Fix some wording issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,10 +107,13 @@
     ],
     "cSpell.words": [
         "Abhinav",
+        "alokator",
         "alokatora",
+        "alokatorów",
         "Blazor",
         "BROWSIX",
-        "dealokacji",
+        "dezalokacje",
+        "dezalokacji",
         "frameworka",
         "frameworki",
         "frontendy",
@@ -124,6 +127,7 @@
         "Portowanie",
         "przeportowane",
         "RAII",
+        "realokacje",
         "Reiser",
         "responsywnością",
         "responsywność",
