Add intro, WASM and WebRTC description

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -124,6 +124,8 @@
         "Karadogan",
         "Mert",
         "nieresponsywnie",
+        "niskoopóźnieniowej",
+        "otwartoźródłowy",
         "Portowanie",
         "przeportowane",
         "RAII",
