Add WebSocket chapter, ending, more citations and missing commas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -123,9 +123,12 @@
         "Juslenius",
         "Karadogan",
         "Mert",
+        "Nickerson",
         "nieresponsywnie",
         "niskoopóźnieniowej",
+        "Ogundeyi",
         "otwartoźródłowy",
+        "Pimentel",
         "Portowanie",
         "przeportowane",
         "RAII",
@@ -136,15 +139,20 @@
         "responsywnych",
         "rustup",
         "Ryzen",
+        "Sakari",
         "Santeri",
         "SCTP",
+        "Shing",
         "SIMD",
         "Skublewska",
         "Streamr",
         "Suryś",
+        "Tanskanen",
         "telechirurgii",
         "uruchomieniowe",
         "Weihang",
+        "Weijuan",
+        "Yinka",
         "zaalokowanej"
     ],
     "cSpell.ignoreRegExpList": [
