Fix some wording issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -131,6 +131,7 @@
         "Pimentel",
         "Portowanie",
         "przeportowane",
+        "przeportowanymi",
         "RAII",
         "realokacje",
         "Reiser",
