Fix communaction graphs and wording issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -135,6 +135,7 @@
         "RAII",
         "realokacje",
         "Reiser",
+        "responsywne",
         "responsywnością",
         "responsywność",
         "responsywnych",
