Add definitions section and collaborative app graph

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -122,6 +122,9 @@
         "Jangda",
         "Juslenius",
         "Karadogan",
+        "kolaboratywna",
+        "kolaboratywnej",
+        "kolaboratywnych",
         "Mert",
         "Nickerson",
         "nieresponsywnie",
