Add more text to introduction and summary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,6 +112,7 @@
         "alokatorów",
         "Blazor",
         "BROWSIX",
+        "Clideo",
         "dezalokacje",
         "dezalokacji",
         "frameworka",
@@ -123,6 +124,7 @@
         "Juslenius",
         "Karadogan",
         "kolaboratywna",
+        "kolaboratywne",
         "kolaboratywnej",
         "kolaboratywnych",
         "Mert",
