Possibly final fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -141,6 +141,7 @@
         "realokacje",
         "Reiser",
         "responsywne",
+        "responsywnie",
         "responsywnością",
         "responsywność",
         "responsywnych",
